--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Random GitHub Repo</title>
 		%sveltekit.head%
@@ -15,6 +15,6 @@
 		}
 	</style>
 	<body data-sveltekit-preload-data="hover" class="text-white items-center justify-center flex">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents" class="flex justify-center items-center w-full h-full">%sveltekit.body%</div>
 	</body>
 </html>
